--- a/package.json
+++ b/package.json
@@ -8,5 +8,20 @@
   "keywords": [],
   "author": "ninjaherodev <ninjaherodev@gmail.com>",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
+    "mssql": "^10.0.4",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
+  }
 }
