--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.1",
+    "eslint": "^8.57.1",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
